--- a/applemusic.html
+++ b/applemusic.html
@@ -171,13 +171,13 @@
     /* ---------- SharePlay 팝업 UI ---------- */
     .shareplay-popup {
       position: fixed;
-      bottom: 80px;
-      left: 50%;
-      transform: translateX(-50%) scale(0.95);
-      width: 360px;
+      bottom: 0;
+      left: 0;
+      width: 100%; /* 전체 너비 */
+      height: 100vh; /* 전체 높이 */
       background: white;
-      border-radius: 28px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
+      border-radius: 28px; /* 둥근 모서리 */
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25); /* 그림자 추가 */
       opacity: 0;
       transition: opacity 0.4s ease, transform 0.4s ease;
       z-index: 999;
