--- a/applemusic.html
+++ b/applemusic.html
@@ -171,13 +171,13 @@
     /* ---------- SharePlay 팝업 UI ---------- */
     .shareplay-popup {
       position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%; /* 전체 너비 */
-      height: 100vh; /* 전체 높이 */
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%) scale(0.95);
+      width: 380px;
       background: white;
-      border-radius: 28px; /* 둥근 모서리 */
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25); /* 그림자 추가 */
+      border-radius: 28px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
       opacity: 0;
       transition: opacity 0.4s ease, transform 0.4s ease;
       z-index: 999;
@@ -333,8 +333,8 @@
     </div>
     <div class="shareplay-profile">
       <div class="left">
-        <div class="avatar">ㅋㅋ</div>
-        <div class="name">ㅋㅋ</div>
+        <div class="avatar">Me</div>
+        <div class="name">Me</div>
       </div>
       <div class="edit-btn">편집</div>
     </div>
@@ -354,4 +354,4 @@
   </script>
 
 </body>
-</html>
+</html> 
