--- a/applemusic.html
+++ b/applemusic.html
@@ -174,7 +174,7 @@
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%) scale(0.95);
-      width: 380px;
+      width: 360px; height: 420px;
       background: white;
       border-radius: 28px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
@@ -233,13 +233,14 @@
     .shareplay-profile .avatar {
       width: 36px;
       height: 36px;
-      background: #ccc;
       border-radius: 50%;
+      background: linear-gradient(135deg, #b0b0b0, #e0e0e0); /* 은은한 그라데이션 */
+      color: white;
+      font-weight: 600;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-weight: bold;
-      color: #333;
+      font-size: 14px;
     }
 
     .shareplay-profile .name {
