--- a/applemusic.html
+++ b/applemusic.html
@@ -328,7 +328,7 @@
   <!-- SharePlay 팝업 -->
   <div id="shareplay" class="shareplay-popup">
     <div class="shareplay-header">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Apple_Music_icon.svg/1024px-Apple_Music_icon.svg.png" alt="icon" />
+      <img src="images/ShaerPlay.png" alt="icon" />
       <h2>○○○님과 연결하시겠습니까?</h2>
       <p>사용자의 기기에서 Apple Music의<br/>재생 콘텐츠를 제어할 수 있습니다.</p>
     </div>
