--- a/applemusic.html
+++ b/applemusic.html
@@ -277,6 +277,10 @@
       width: 100%;
       cursor: pointer;
     }
+    
+  .shareplay-desc {
+      margin-bottom: 20px;  /* 적당히 여백 주기, 필요하면 24px~32px까지 조절 가능 */
+    }
   </style>
 </head>
 <body>
@@ -330,7 +334,7 @@
     <div class="shareplay-header">
       <img src="images/SharePlay.jpg" alt="icon" />
       <h2>○○○님과 연결하시겠습니까?</h2>
-      <p>사용자의 기기에서 Apple Music의<br/>재생 콘텐츠를 제어할 수 있습니다.</p>
+      <p class="shareplay-desc"> 기기에서 Apple Music의<br/>재생 콘텐츠를 제어할 수 있습니다.</p>
     </div>
     <div class="shareplay-profile">
       <div class="left">
