--- a/applemusic.html
+++ b/applemusic.html
@@ -36,9 +36,13 @@
     }
 
     .search-bar {
-      margin: 0 16px 16px;
+      margin: 0 12px 16px; /* ✅ 양쪽 마진 통일 (navbar와 같게) */
     }
 
+    .search-bar input {
+      padding: 10px 12px;  /* ✅ 내부 패딩도 균형 맞추기 */
+    }
+    
     .search-bar input {
       width: 100%;
       padding: 10px 14px;
@@ -50,9 +54,22 @@
 
     .playlist-cover {
       width: 90%;
-      height: 230px;
+      aspect-ratio: 1 / 1;  /* ✅ 정사각형 비율 */
       margin: 0 auto 12px;
       border-radius: 20px;
+      overflow: hidden; /* ✅ 안쪽 비디오 모서리도 잘리게 */
+      background-color: #f1f1f1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .playlist-cover video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* ✅ 꽉 차게 */
+      display: block;
+    }
       background-color: #f1f1f1;
       display: flex;
       align-items: center;
@@ -174,7 +191,7 @@
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%) scale(0.95);
-      width: 380px; height: 420px;
+      width: 380px; height: 380px;
       background: white;
       border-radius: 28px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
@@ -295,7 +312,9 @@
     <input type="text" placeholder="검색" />
   </div>
 
-  <div class="playlist-cover">커버 이미지 영역</div>
+  <div class="playlist-cover">
+    <video src="videos/a1.MP4" autoplay muted loop playsinline></video>
+</div>
 
   <div class="playlist-title">무제 플레이리스트</div>
   <div class="playlist-updated">금요일에 업데이트됨</div>
@@ -333,7 +352,7 @@
   <div id="shareplay" class="shareplay-popup">
     <div class="shareplay-header">
       <img src="images/SharePlay.jpg" alt="icon" />
-      <h2>○○○님과 연결하시겠습니까?</h2>
+      <h2>신정환님과 연결하시겠습니까?</h2>
       <p class="shareplay-desc"> 기기에서 Apple Music의<br/>재생 콘텐츠를 제어할 수 있습니다.</p>
     </div>
     <div class="shareplay-profile">
@@ -359,4 +378,4 @@
   </script>
 
 </body>
-</html> 
+</html>
