--- a/applemusic.html
+++ b/applemusic.html
@@ -20,7 +20,6 @@
       position: relative;
     }
 
-    /* ---------- 기존 Apple Music UI ---------- */
     .navbar {
       display: flex;
       align-items: center;
@@ -36,13 +35,9 @@
     }
 
     .search-bar {
-      margin: 14px 14px; /* ✅ 양쪽 마진 통일 (navbar와 같게) */
+      margin: 14px 14px;
     }
 
-    .search-bar input {
-      padding: 10px 12px;  /* ✅ 내부 패딩도 균형 맞추기 */
-    }
-    
     .search-bar input {
       width: 100%;
       padding: 10px 14px;
@@ -56,7 +51,7 @@
       width: 90%;
       aspect-ratio: 1 / 1;
       margin: 0 auto 12px;
-      border-radius: 20px; /* 모서리 필렛 */
+      border-radius: 20px;
       overflow: hidden;
       background-color: #f1f1f1;
       display: flex;
@@ -69,6 +64,7 @@
       height: 100%;
       object-fit: cover;
       display: block;
+      border-radius: 20px; /* ✅ 필렛 직접 적용 */
     }
 
     .playlist-title {
@@ -102,13 +98,13 @@
     }
 
     .play-btn {
-      background-color: #dcdcdc; /* 회색 배경 */
-      color: #ff2d55; /* 애플뮤직 UI 빨간색 글씨 */
+      background-color: #dcdcdc;
+      color: #ff2d55;
     }
 
     .shuffle-btn {
       background-color: #dcdcdc;
-      color: #ff2d55; /* 빨간 글씨 */
+      color: #ff2d55;
     }
 
     .music-list {
@@ -178,7 +174,6 @@
       height: 20px;
     }
 
-    /* ---------- SharePlay 팝업 UI ---------- */
     .shareplay-popup {
       position: fixed;
       bottom: 10px;
@@ -203,6 +198,19 @@
     .shareplay-header {
       text-align: center;
       padding: 24px 20px 16px;
+      position: relative;
+    }
+
+    #close-shareplay {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: none;
+      border: none;
+      font-size: 24px;
+      font-weight: 600;
+      cursor: pointer;
+      color: #ff2d55; /* ✅ 빨간색 적용 */
     }
 
     .shareplay-header img {
@@ -268,7 +276,7 @@
       color: #888;
       text-align: center;
       margin-top: 16px;
-      margin-bottom: 16px;  /* 아래쪽에 간격을 띄워서 문장과 연결 버튼이 구분되게 */
+      margin-bottom: 16px;
       padding: 0 16px;
     }
 
@@ -278,7 +286,7 @@
     }
 
     .shareplay-footer button {
-      background: #d00;
+      background: #ff2d55;
       color: white;
       font-size: 17px;
       font-weight: 600;
@@ -296,7 +304,6 @@
 </head>
 <body>
 
-  <!-- 기존 Apple Music 페이지 UI -->
   <div class="navbar">
     <img src="images/back.svg" alt="Back" />
     무제 플레이리스트
@@ -308,7 +315,7 @@
 
   <div class="playlist-cover">
     <video src="videos/a1.MP4" autoplay muted loop playsinline></video>
-</div>
+  </div>
 
   <div class="playlist-title">무제 플레이리스트</div>
   <div class="playlist-updated">금요일에 업데이트됨</div>
@@ -345,7 +352,7 @@
   <!-- SharePlay 팝업 -->
   <div id="shareplay" class="shareplay-popup">
     <div class="shareplay-header">
-      <button id="close-shareplay" style="position: absolute; top: 10px; right: 10px; background: none; color: #007aff; border: none; font-size: 24px; cursor: pointer;">X</button>
+      <button id="close-shareplay">X</button>
       <img src="images/SharePlay.jpg" alt="icon" />
       <h2>신정환님과 연결하시겠습니까?</h2>
       <p class="shareplay-desc">기기에서 Apple Music의<br/>재생 콘텐츠를 제어할 수 있습니다.</p>
@@ -364,20 +371,27 @@
   </div>
 
   <script>
-    // 팝업 3.5초 후 보여지게
-    setTimeout(() => {
-      document.getElementById('shareplay').classList.add('show');
-    }, 3500);
+    const shareplayPopup = document.getElementById('shareplay');
+    const shareplayClose = document.getElementById('close-shareplay');
 
-    // X 버튼 클릭 시 팝업 닫기
-    document.getElementById('shareplay-btn').addEventListener('click', function () {
-      document.getElementById('shareplay').classList.remove('show');
-    });
-    document.getElementById('close-shareplay').addEventListener('click', function () {
-      document.getElementById('shareplay').classList.remove('show');
-      window.location.href = 'applemusic.html';  // Apple Music 페이지로 돌아가기 (파일명에 맞게 수정)
+    // 로컬 스토리지 체크
+    if (!localStorage.getItem('shareplayDismissed')) {
+      setTimeout(() => {
+        shareplayPopup.classList.add('show');
+      }, 3500);
+    }
+
+    // 연결 버튼
+    document.getElementById('shareplay-btn').addEventListener('click', () => {
+      shareplayPopup.classList.remove('show');
     });
 
+    // X 버튼
+    shareplayClose.addEventListener('click', () => {
+      shareplayPopup.classList.remove('show');
+      localStorage.setItem('shareplayDismissed', 'true'); // ✅ 다시 안 뜨게 저장
+      window.location.href = 'applemusic.html';
+    });
   </script>
 </body>
 </html>
