--- a/applemusic.html
+++ b/applemusic.html
@@ -34,18 +34,25 @@
       margin-right: 12px;
     }
 
-    .search-bar {
-      margin: 14px 14px;
-    }
+  .search-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 16px;       /* 양쪽 여백 균등하게 */
+    max-width: 390px;      /* iPhone 12 기준 너비 제한 */
+    margin: 0 auto;        /* 가운데 정렬 */
+    box-sizing: border-box;
+  }
+  .search-bar {
+    flex: 1;
+    height: 36px;
+    padding: 0 12px;
+    border-radius: 10px;
+    background-color: #f1f1f1;
+    font-size: 14px;
+    border: none;
+  }
 
-    .search-bar input {
-      width: 100%;
-      padding: 10px 14px;
-      font-size: 16px;
-      border-radius: 12px;
-      border: none;
-      background-color: #f2f2f7;
-    }
 
     .playlist-cover {
       width: 90%;
