--- a/applemusic.html
+++ b/applemusic.html
@@ -38,11 +38,13 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 0 16px;       /* 양쪽 여백 균등하게 */
-      max-width: 390px;      /* iPhone 12 기준 너비 제한 */
-      margin: 0 auto;        /* 가운데 정렬 */
+      padding: 0 16px;
+      max-width: 390px;
+      margin: 0 auto;
       box-sizing: border-box;
+      margin-bottom: 20px; /* ✅ 검색창과 영상 사이 간격 추가 */
     }
+
     .search-bar {
       flex: 1;
       height: 36px;
@@ -51,11 +53,11 @@
       background-color: #f1f1f1;
       font-size: 14px;
       border: none;
-      color: #333; /* 진한 회색 텍스트 */
+      color: #333;
     }
 
     .search-bar::placeholder {
-      color: #888; /* 진회색 placeholder 텍스트 */
+      color: #888;
     }
 
     .playlist-cover {
@@ -75,7 +77,7 @@
       height: 100%;
       object-fit: cover;
       display: block;
-      border-radius: 20px; /* ✅ 필렛 직접 적용 */
+      border-radius: 20px;
     }
 
     .playlist-title {
@@ -106,15 +108,19 @@
       font-size: 16px;
       border: none;
       font-weight: 500;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
     }
 
     .play-btn {
-      background-color: #dcdcdc;
-      color: #ff2d55;
+      background-color: #ff2d55;
+      color: white;
     }
 
     .shuffle-btn {
-      background-color: #dcdcdc;
+      background-color: #f2f2f2;
       color: #ff2d55;
     }
 
@@ -180,7 +186,7 @@
       gap: 12px;
     }
 
-    .now-playing-controls img {
+    .now-playing-controls svg {
       width: 20px;
       height: 20px;
     }
@@ -221,7 +227,7 @@
       font-size: 24px;
       font-weight: 600;
       cursor: pointer;
-      color: #ff2d55; /* ✅ 빨간색 적용 */
+      color: #ff2d55;
     }
 
     .shareplay-header img {
@@ -307,21 +313,13 @@
       width: 100%;
       cursor: pointer;
     }
-
-    .shareplay-desc {
-      margin-bottom: 20px;
-    }
-
-    /* 수정된 부분: 임의 재생 버튼 옆 아이콘 */
-    .shuffle-btn svg {
-      margin-left: 8px;
-    }
   </style>
 </head>
 <body>
 
   <div class="navbar">
-    <img src="images/back.svg" alt="Back" />
+    <!-- 엑박 방지: 텍스트로 대체 -->
+    <span style="font-size: 20px; margin-right: 12px;">←</span>
     무제 플레이리스트
   </div>
 
@@ -337,10 +335,17 @@
   <div class="playlist-updated">1주일 전 업데이트됨</div>
 
   <div class="controls">
-    <button class="play-btn">재생</button>
+    <button class="play-btn">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" viewBox="0 0 16 16">
+        <path d="M4 3.993v8.014c0 .53.608.846 1.043.53l6.07-4.007a.636.636 0 000-1.06L5.043 3.462A.636.636 0 004 3.993z"/>
+      </svg>
+      재생
+    </button>
+
     <button class="shuffle-btn">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M1 4l5-5 5 5M6 14l5-5 5 5M1 10h3m8 0h3" />
+      임의 재생
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M3 3l10 10M3 13l10-10M4 4h3m5 0h1M9 12h3m0 0h1"/>
       </svg>
     </button>
   </div>
@@ -364,9 +369,9 @@
     <div class="now-playing-cover"></div>
     <div class="now-playing-info">음악 제목</div>
     <div class="now-playing-controls">
-      <img src="images/prev.svg" alt="Prev" />
-      <img src="images/play.svg" alt="Play" />
-      <img src="images/next.svg" alt="Next" />
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polygon points="5 3 19 12 5 21 5 3"/></svg>
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 18 15 12 9 6"/></svg>
     </div>
   </div>
 
