--- a/applemusic.html
+++ b/applemusic.html
@@ -162,37 +162,58 @@
     }
 
     .now-playing-bar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 12px;
-      width: 100%; /* 390px 대신 이걸 써야 작은 기기에서도 오른쪽이 안 짤림 */
-      box-sizing: border-box;
-    }
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 390px;
+  height: 60px;
+  background-color: white;
+  border-top: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 12px;
+  box-sizing: border-box;
+  z-index: 10;
+}
 
-    .now-playing-info {
-      flex: 1;
-      margin-left: 12px;
-      font-size: 14px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+.now-playing-left {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  flex: 1;
+  min-width: 0;
+}
 
-    .now-playing-controls {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
+.music-cover {
+  width: 44px;
+  height: 44px;
+  border-radius: 8px;
+  background-color: #ccc;
+  flex-shrink: 0;
+}
 
-    .now-playing-controls button {
-      background: none;
-      border: none;
-      font-size: 18px;
-      color: #ff2d55;
-      cursor: pointer;
-      padding: 0;
-    }
+.now-playing-info {
+  margin-left: 12px;
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #000;
+}
+
+.now-playing-controls {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-left: 12px;
+  flex-shrink: 0;
+}
+
+.now-playing-controls svg {
+  display: block;
+}
+
 
     .shareplay-popup {
       position: fixed;
@@ -378,13 +399,24 @@
   </ul>
 
   <div class="now-playing-bar">
-    <div class="now-playing-cover"></div>
-    <div class="now-playing-info">음악 제목</div>
-    <div class="now-playing-controls">
-      <button>⏸</button>
-      <button>⏭</button>
-    </div>
+  <div class="now-playing-left">
+    <div class="music-cover"></div>
+    <div class="now-playing-info">BLASÉOUL(G6) [feat. Ja...</div>
   </div>
+  <div class="now-playing-controls">
+    <!-- Pause SVG -->
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" stroke="#000" stroke-width="2" stroke-linecap="round">
+      <line x1="6" y1="4" x2="6" y2="20" />
+      <line x1="14" y1="4" x2="14" y2="20" />
+    </svg>
+    <!-- Next SVG -->
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#000">
+      <polygon points="5,4 15,12 5,20" />
+      <rect x="15" y="4" width="2" height="16" />
+    </svg>
+  </div>
+</div>
+
 
   <div class="shareplay-popup">
     <div class="shareplay-header">
