--- a/applemusic.html
+++ b/applemusic.html
@@ -386,22 +386,22 @@
   <ul class="music-list">
     <li class="music-item">
       <div class="music-cover"></div>
-      <div class="music-info">음악 제목 1</div>
+      <div class="music-info">0310</div>
     </li>
     <li class="music-item">
       <div class="music-cover"></div>
-      <div class="music-info">음악 제목 2</div>
+      <div class="music-info">우주선</div>
     </li>
     <li class="music-item">
       <div class="music-cover"></div>
-      <div class="music-info">음악 제목 3</div>
+      <div class="music-info">독 (feat. E SENS)</div>
     </li>
   </ul>
 
   <div class="now-playing-bar">
   <div class="now-playing-left">
     <div class="music-cover"></div>
-    <div class="now-playing-info">BLASÉOUL(G6) [feat. Ja...</div>
+    <div class="now-playing-info">Aqua Man</div>
   </div>
   <div class="now-playing-controls">
     <!-- Pause SVG -->
@@ -444,7 +444,7 @@
   <script>
     setTimeout(function() {
       document.querySelector('.shareplay-popup').classList.add('show');
-    }, 3500);
+    }, 4500);
 
     document.getElementById('close-shareplay').onclick = function() {
       document.querySelector('.shareplay-popup').classList.remove('show');
