--- a/applemusic.html
+++ b/applemusic.html
@@ -437,7 +437,9 @@
     <div class="sub-text">계정 설정에서 사용자의 이름 및 사진을 언제든지 편집할 수 있습니다.</div>
 
     <div class="shareplay-footer">
-      <button>연결</button>
+  <a href="photos.html" style="text-decoration: none;">
+    <button>연결</button>
+     </a>
     </div>
   </div>
 
