--- a/photos.html
+++ b/photos.html
@@ -16,32 +16,24 @@
       position: relative;
     }
 
-    .header-overlay {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      padding: 12px 12px 28px 12px;
-      background: linear-gradient(to bottom, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0));
-      z-index: 10;
-    }
-
     .navbar {
-      display: flex;
-      align-items: center;
+      position: relative;
+      z-index: 1;
+      padding: 20px 12px 10px;
+      background: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0));
+      color: white;
       font-size: 17px;
       font-weight: 500;
-      color: black;
+      line-height: 1.3;
     }
 
     .navbar span {
-      margin-right: 10px;
-      color: #007AFF;
+      display: block;
     }
 
     .title {
       font-size: 22px;
       font-weight: 600;
-      margin-left: 4px;
     }
 
     .grid {
@@ -49,7 +41,7 @@
       grid-template-columns: repeat(3, 1fr);
       gap: 1px;
       background-color: #e5e5e5;
-      margin-top: 70px;
+      height: 550px; /* 고정 화면 맞춤용 줄임 */
     }
 
     .photo {
@@ -60,17 +52,17 @@
 
     .photo-count {
       text-align: center;
-      font-size: 14px;
-      color: #000;
-      font-weight: 600;
-      margin: 10px 0 90px;
+      font-size: 15px;
+      color: #444;
+      margin: 8px 0 0;
+      font-weight: 500;
     }
 
     .tab-bar {
       position: absolute;
       bottom: 0;
       width: 100%;
-      height: 85px;
+      height: 75px;
       border-top: 1px solid #ddd;
       background-color: #fff;
       display: flex;
@@ -99,25 +91,19 @@
   </style>
 </head>
 <body>
-  <!-- 상단 오버레이 바 -->
-  <div class="header-overlay">
-    <div class="navbar">
-      <span>＜ 앨범</span>
-      <div class="title">최근 항목</div>
-    </div>
+  <div class="navbar">
+    <span>＜ 앨범</span>
+    <div class="title">최근 항목</div>
   </div>
 
-  <!-- 사진 격자 -->
   <div class="grid">
-    <div class="photo"></div><div class="photo"></div><div class="photo"></div>
+    <!-- placeholder 이미지 6개로 줄임 (1화면에 맞게) -->
     <div class="photo"></div><div class="photo"></div><div class="photo"></div>
     <div class="photo"></div><div class="photo"></div><div class="photo"></div>
   </div>
 
-  <!-- 사진 개수 -->
-  <div class="photo-count">6,962장의 사진, 40개의 비디오</div>
+  <div class="photo-count">6,963장의 사진, 40개의 비디오</div>
 
-  <!-- 하단 탭바 -->
   <div class="tab-bar">
     <div class="tab-item">
       <svg viewBox="0 0 24 24"><path d="M21 19V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2zM5 5h14v14H5V5zm3 12l2.5-3.01L12 17l3.5-4.5L19 17H5z"/></svg>
