--- a/about.html
+++ b/about.html
@@ -1,318 +1,232 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=390, user-scalable=no" />
-  <title>iMessage</title>
+  <meta name="viewport" content="width=390, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Messages</title>
   <style>
-    * {
-      box-sizing: border-box;
+    body {
       margin: 0;
-      padding: 0;
-    }
-
-    html, body {
-      background-color: #000;
-      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
-      width: 100%;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .container {
+      font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      background-color: #f2f2f7;
       width: 390px;
-      height: 670px;
-      background-color: white;
-      display: flex;
-      flex-direction: column;
+      height: 844px;
       overflow: hidden;
+      position: relative;
     }
-
-    .messages {
-      flex: 1;
-      padding: 12px 14px;
+    .messages-container {
+      padding: 20px;
+      height: 100%;
+      box-sizing: border-box;
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch;
+      justify-content: flex-end;
     }
-
-    .message-wrapper {
-      display: flex;
-    }
-
     .message {
       background-color: #007aff;
       color: white;
       padding: 10px 14px;
-      font-size: 15px;
-      max-width: 80%;
-      animation: messageSend 0.3s ease forwards;
-      opacity: 0;
-      border-top-left-radius: 18px;
-      border-top-right-radius: 18px;
-      border-bottom-left-radius: 18px;
-      border-bottom-right-radius: 6px;
+      border-radius: 18px;
+      margin-bottom: 10px;
+      max-width: 70%;
+      align-self: flex-end;
+      word-wrap: break-word;
+      font-size: 16px;
+      animation: slideIn 0.3s ease-out;
     }
-
-    .incoming {
+    .response {
       background-color: #e5e5ea;
       color: black;
       align-self: flex-start;
-      border-top-left-radius: 18px;
-      border-top-right-radius: 18px;
-      border-bottom-left-radius: 6px;
-      border-bottom-right-radius: 18px;
+      animation: slideInLeft 0.3s ease-out;
     }
-
-    @keyframes messageSend {
-      0% {
-        opacity: 0;
-        transform: scale(0.95) translateY(20px);
-      }
-      100% {
-        opacity: 1;
-        transform: scale(1) translateY(0);
-      }
-    }
-
-    .input-area {
-      display: flex;
-      align-items: center;
-      padding: 8px 10px;
-      border-top: 1px solid #ddd;
-      background-color: #f9f9f9;
-    }
-
-    .input-icons {
-      display: flex;
-      margin-right: 8px;
-    }
-
-    .icon {
-      width: 24px;
-      height: 24px;
-      font-size: 20px;
-      color: #666;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-    }
-
-    .input-area input {
-      flex: 1;
-      padding: 10px 14px;
-      border-radius: 20px;
-      border: 1px solid #ddd;
-      font-size: 15px;
-      outline: none;
-    }
-
-    .send-button {
-      margin-left: 8px;
-      background-color: #007aff;
-      color: white;
-      font-size: 18px;
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      user-select: none;
-    }
-
-    .messages::-webkit-scrollbar {
-      display: none;
-    }
-
-    .typing {
-      width: 50px;
-      height: 24px;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-    }
-
-    .dot {
-      width: 6px;
-      height: 6px;
-      background-color: #555;
-      border-radius: 50%;
-      animation: blink 1.4s infinite ease-in-out both;
-    }
-
-    .dot:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-
-    .dot:nth-child(3) {
-      animation-delay: 0.4s;
-    }
-
-    @keyframes blink {
-      0%, 80%, 100% {
-        transform: scale(0.8);
-        opacity: 0.3;
-      }
-      40% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
     .image-message {
       width: 200px;
+      height: auto;
       border-radius: 18px;
-      object-fit: cover;
-      opacity: 0;
-      animation: messageSend 0.3s ease forwards;
-      transition: transform 0.15s ease;
+      margin-bottom: 10px;
+      align-self: flex-start;
       cursor: pointer;
     }
+    .input-container {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      background-color: white;
+      border-top: 1px solid #ccc;
+    }
+    .input-container input {
+      flex: 1;
+      padding: 10px;
+      border-radius: 20px;
+      border: 1px solid #ccc;
+      outline: none;
+      font-size: 16px;
+    }
+    .input-container button {
+      background: none;
+      border: none;
+      margin-left: 10px;
+      cursor: pointer;
+    }
+    .input-container svg {
+      width: 24px;
+      height: 24px;
+      fill: #007aff;
+    }
+    @keyframes slideIn {
+      from {
+        transform: translateY(20px);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+    @keyframes slideInLeft {
+      from {
+        transform: translateX(-20px);
+        opacity: 0;
+      }
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
 
-    .image-message:active {
-      transform: scale(0.96);
+    /* ✅ 수정된 부분: 클릭 애니메이션 */
+    .image-message.clicked {
+      animation: clickedZoom 0.2s ease;
+    }
+
+    @keyframes clickedZoom {
+      0% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.12);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+
+    /* ✅ 수정된 부분: 이모지 애니메이션 */
+    .emoji {
+      position: absolute;
+      font-size: 24px;
+      opacity: 1;
+      pointer-events: none;
+      transform: translate(-50%, -50%);
+      animation: explode 1s ease-out forwards;
+    }
+
+    @keyframes explode {
+      0% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translate(calc(-50% + var(--x)), calc(-50% + var(--y))) scale(1);
+        opacity: 1;
+      }
     }
 
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="messages" id="messages"></div>
-
-    <div class="input-area">
-      <div class="input-icons">
-        <div class="icon">+</div>
-      </div>
-      <input type="text" id="messageInput" placeholder="iMessage">
-      <div class="send-button" onclick="sendMessage()">↑</div>
-    </div>
+  <div class="messages-container" id="messages">
+    <!-- Messages will appear here -->
   </div>
-
+  <div class="input-container">
+    <input type="text" id="userInput" placeholder="iMessage" />
+    <button onclick="sendMessage()">
+      <svg viewBox="0 0 24 24">
+        <path d="M2 21l21-9L2 3v7l15 2-15 2v7z" />
+      </svg>
+    </button>
+  </div>
   <script>
-    const messages = document.getElementById('messages');
+    const messagesContainer = document.getElementById('messages');
+    const userInput = document.getElementById('userInput');
+    const emojis = ['🎉', '✨', '💥', '🥳', '🔥', '❤️', '🎊', '🌟'];
+    const container = document.body;
 
-    function appendMessage(text, isUser = false, isImage = false) {
-      const wrapper = document.createElement('div');
-      wrapper.className = 'message-wrapper';
-      wrapper.style.justifyContent = isUser ? 'flex-end' : 'flex-start';
+    function appendMessage(text, isUser = true) {
+      const message = document.createElement('div');
+      message.className = 'message';
+      if (!isUser) message.classList.add('response');
 
-      if (isImage) {
+      if (text === 'image') {
         const img = document.createElement('img');
         img.src = 'images/m2.png';
         img.className = 'image-message';
 
-        img.onclick = (e) => {
-          e.preventDefault();
-          triggerEmojiExplosionAndRedirect();
-        };
+        // ✅ 클릭 애니메이션 추가
+        img.addEventListener('click', () => {
+          img.classList.add('clicked');
+        });
 
-        wrapper.appendChild(img);
+        message.appendChild(img);
       } else {
-        const msg = document.createElement('div');
-        msg.className = 'message';
-        if (!isUser) msg.classList.add('incoming');
-        msg.textContent = text;
-        wrapper.appendChild(msg);
+        message.textContent = text;
       }
 
-      messages.appendChild(wrapper);
-      messages.scrollTo({ top: messages.scrollHeight, behavior: 'smooth' });
-    }
-
-    function showTypingIndicator() {
-      const wrapper = document.createElement('div');
-      wrapper.className = 'message-wrapper typing-wrapper';
-      wrapper.style.justifyContent = 'flex-start';
-
-      const bubble = document.createElement('div');
-      bubble.className = 'message incoming';
-
-      const typing = document.createElement('div');
-      typing.className = 'typing';
-      typing.innerHTML = '<div class="dot"></div><div class="dot"></div><div class="dot"></div>';
-
-      bubble.appendChild(typing);
-      wrapper.appendChild(bubble);
-      messages.appendChild(wrapper);
-      messages.scrollTo({ top: messages.scrollHeight, behavior: 'smooth' });
-
-      return wrapper;
+      messagesContainer.appendChild(message);
+      messagesContainer.scrollTop = messagesContainer.scrollHeight;
     }
 
     function sendMessage() {
-      const input = document.getElementById('messageInput');
-      const text = input.value.trim();
-      if (!text) return;
-      appendMessage(text, true);
-      input.value = '';
+      const text = userInput.value.trim();
+      if (text !== '') {
+        appendMessage(text);
+        userInput.value = '';
+        setTimeout(() => showTyping(), 2000);
+      }
     }
 
-    function triggerEmojiExplosionAndRedirect() {
-      const emojis = ['😍', '😎', '🥰', '🩷', '❤️'];
-      const explosionContainer = document.createElement('div');
-      explosionContainer.style.position = 'fixed';
-      explosionContainer.style.top = '0';
-      explosionContainer.style.left = '0';
-      explosionContainer.style.width = '100%';
-      explosionContainer.style.height = '100%';
-      explosionContainer.style.pointerEvents = 'none';
-      explosionContainer.style.zIndex = '9999';
-      document.body.appendChild(explosionContainer);
+    function showTyping() {
+      const typing = document.createElement('div');
+      typing.className = 'message response';
+      typing.textContent = '•••';
+      messagesContainer.appendChild(typing);
+      messagesContainer.scrollTop = messagesContainer.scrollHeight;
 
-      for (let i = 0; i < 30; i++) {
+      setTimeout(() => {
+        typing.remove();
+        appendMessage('Here is a photo.');
+        appendMessage('image', false);
+        launchEmojis();
+      }, 1500);
+    }
+
+    // ✅ 수정된 이모지 퍼지는 함수
+    function launchEmojis() {
+      const count = 60;
+      for (let i = 0; i < count; i++) {
         const emoji = document.createElement('div');
+        emoji.className = 'emoji';
         emoji.textContent = emojis[Math.floor(Math.random() * emojis.length)];
-        emoji.style.position = 'absolute';
+
         emoji.style.left = '50%';
         emoji.style.top = '50%';
-        emoji.style.fontSize = '24px';
-        emoji.style.opacity = '1';
-        emoji.style.transition = 'transform 0.8s ease-out, opacity 0.8s ease-out';
 
-        const x = (Math.random() - 0.5) * 300;
-        const y = (Math.random() - 0.5) * 400;
+        const angle = Math.random() * 2 * Math.PI;
+        const distance = 100 + Math.random() * 200;
 
-        setTimeout(() => {
-          emoji.style.transform = `translate(${x}px, ${y}px) scale(1.5)`;
-          emoji.style.opacity = '0';
-        }, 10);
+        const x = Math.cos(angle) * distance;
+        const y = Math.sin(angle) * distance;
 
-        explosionContainer.appendChild(emoji);
+        emoji.style.setProperty('--x', `${x}px`);
+        emoji.style.setProperty('--y', `${y}px`);
+        emoji.style.animationDelay = `${Math.random() * 0.2}s`;
+
+        container.appendChild(emoji);
+
+        setTimeout(() => emoji.remove(), 1200);
       }
-
-      setTimeout(() => {
-        window.location.href = 'photos.html';
-      }, 900);
     }
-
-    window.onload = () => {
-      appendMessage('지금은 수업 중입니다.', true);
-
-      setTimeout(() => {
-        const typingBubble = showTypingIndicator();
-
-        setTimeout(() => {
-          typingBubble.remove();
-          appendMessage('그렇습니까', false);
-
-          setTimeout(() => {
-            appendMessage('보고싶습니당', false);
-
-            setTimeout(() => {
-              appendMessage('', false, true);
-            }, 1000);
-          }, 1000);
-        }, 1000);
-      }, 2000);
-    };
   </script>
 </body>
 </html>
